# ecommerce-fastapi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  database.py
